--- a/app/src/main/res/layout/list_item_quote.xml
+++ b/app/src/main/res/layout/list_item_quote.xml
@@ -5,8 +5,9 @@
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:paddingStart="@dimen/activity_large_margin"
+    android:paddingEnd="@dimen/activity_large_margin"
+    >
 
     <TextView
         android:id="@+id/symbol"
@@ -36,8 +37,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/percent_change_pill_green"
-            android:paddingLeft="3dp"
-            android:paddingRight="3dp"
+            android:paddingStart="@dimen/activity_change_margin"
+            android:paddingEnd="@dimen/activity_change_margin"
             tools:text="100%" />
     </LinearLayout>
 </LinearLayout>
