--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
-    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_large_margin">16dp</dimen>
+    <dimen name="activity_small_margin">4dp</dimen>
+    <dimen name="activity_change_margin">3dp</dimen>
 </resources>
