--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -16,33 +16,40 @@
         tools:text="GOOG"
         />
     <TextView
-        android:id="@+id/detail_percentage_change"
+        android:id="@+id/detail_absolute_change"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBaseline_toBaselineOf="@id/detail_title"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:paddingEnd="@dimen/activity_large_margin"
-        tools:text="(-0.25%)"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:paddingStart="@dimen/activity_small_margin"
+        android:paddingEnd="@dimen/activity_small_margin"
+        android:background="@drawable/percent_change_pill_green"
+        android:layout_marginEnd="@dimen/activity_large_margin"
+        tools:text="-$0.25"
         />
     <TextView
-        android:id="@+id/detail_absolute_change"
+        android:id="@+id/detail_percentage_change"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@id/detail_percentage_change"
-        app:layout_constraintBaseline_toBaselineOf="@id/detail_title"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/detail_title"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:paddingStart="@dimen/activity_small_margin"
         android:paddingEnd="@dimen/activity_small_margin"
-        tools:text="-$0.25"
+        android:background="@drawable/percent_change_pill_green"
+        android:layout_marginEnd="@dimen/activity_large_margin"
+        tools:text="-0.25%"
         />
 
     <TextView
         android:id="@+id/detail_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@id/detail_absolute_change"
+        app:layout_constraintEnd_toStartOf="@id/detail_percentage_change"
         app:layout_constraintBaseline_toBaselineOf="@id/detail_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:paddingStart="@dimen/activity_large_margin"
         android:paddingEnd="@dimen/activity_large_margin"
         tools:text="$100.00"
         />
